--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
 .app__stats {
@@ -32,6 +32,9 @@ body {
 
 @media (max-width: 990px) {
   .app {
+    flex-direction: column;
+  }
+  .app__stats{
     flex-direction: column;
   }
 }
